hide vue apps til render is done

--- a/algobattle_web/templates/admin_configs.jinja
+++ b/algobattle_web/templates/admin_configs.jinja
@@ -28,7 +28,7 @@
 </script>
 
 
-<div id="app">
+<div id="app" v-cloak>
   <h3>Configs</h3>
   <form id="config-table" @submit.prevent="edit_config" class="mb-5">
     <table class="table w-xs" id="configs">
