--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -73,7 +73,7 @@
   </div>
 </script>
 
-<div id="app">
+<div id="app" v-cloak>
   <h3>Users</h3>
   <table class="table table-hover mb-2" id="users">
     <thead>
