--- a/algobattle_web/templates/documentation.jinja
+++ b/algobattle_web/templates/documentation.jinja
@@ -80,7 +80,7 @@
   </tr>
 </script>
 
-<div id="app">
+<div id="app" v-cloak>
   <h3>Documentation</h3>
   {% if user.is_admin %}
   <div class="accordion" id="problems">
