--- a/algobattle_web/templates/admin_contexts.jinja
+++ b/algobattle_web/templates/admin_contexts.jinja
@@ -39,7 +39,17 @@
 </script>
 
 <div id="app" v-cloak>
-  <h3>Contexts</h3>
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="#">Users</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="teams">Teams</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="contexts">Contexts</a>
+    </li>
+  </ul>
   <table class="table table-hover mb-2">
     <thead>
       <tr>
