--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -89,7 +89,17 @@
 </script>
 
 <div id="app" v-cloak>
-  <h3>Teams</h3>
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="#">Users</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="teams">Teams</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contexts">Contexts</a>
+    </li>
+  </ul>
   <table class="table">
     <thead>
       <tr>
