--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -77,7 +77,17 @@
 </script>
 
 <div id="app" v-cloak>
-  <h3>Users</h3>
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Users</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="teams">Teams</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contexts">Contexts</a>
+    </li>
+  </ul>
   <table class="table table-hover mb-2" id="users">
     <thead>
       <tr>
