fix context page

--- a/algobattle_web/templates/admin_contexts.jinja
+++ b/algobattle_web/templates/admin_contexts.jinja
@@ -109,7 +109,7 @@
     </div>
   </div>
 
-  <user-window :user="modal_user" :action="action" :modal="modal"></user-window>
+  <context-window :user="modal_context" :action="action" :modal="modal"></context-window>
 </div>
 
 
