--- a/algobattle_web/templates/admin_contexts.jinja
+++ b/algobattle_web/templates/admin_contexts.jinja
@@ -41,13 +41,13 @@
 <div id="app" v-cloak>
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" aria-current="page" href="#">Users</a>
+      <a class="nav-link" aria-current="page" href="users">Users</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="teams">Teams</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="contexts">Contexts</a>
+      <a class="nav-link active" href="#">Contexts</a>
     </li>
   </ul>
   <table class="table table-hover mb-2">
