--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -91,10 +91,10 @@
 <div id="app" v-cloak>
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" aria-current="page" href="#">Users</a>
+      <a class="nav-link" aria-current="page" href="users">Users</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="teams">Teams</a>
+      <a class="nav-link active" href="#">Teams</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="contexts">Contexts</a>
