--- a/algobattle_web/templates/admin_contexts.jinja
+++ b/algobattle_web/templates/admin_contexts.jinja
@@ -19,8 +19,8 @@
       <form class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="modalLabel">
-          <span v-if="action == 'edit'">Edit user</span>
-          <span v-else>Create new user</span>
+          <span v-if="action == 'edit'">Edit context</span>
+          <span v-else>Create new context</span>
           </h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
