--- a/algobattle_web/templates/admin_contexts.jinja
+++ b/algobattle_web/templates/admin_contexts.jinja
@@ -16,7 +16,7 @@
 <script type="text/x-template" id="contextWindow">
   <div class="modal fade" id="contextModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true" ref="user_modal">
     <div class="modal-dialog modal-dialog-centered">
-      <form class="modal-content">
+      <form class="modal-content" @submit.prevent="submit_data">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="modalLabel">
           <span v-if="action == 'edit'">Edit context</span>
@@ -26,12 +26,12 @@
         </div>
         <div class="modal-body">
           <label for="name" class="form-label">Name</label>
-          <input class="form-control w-em" type="text" v-model="data.name">
+          <input class="form-control w-em" type="text" v-model="data.name" :required="action == 'create'">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger me-auto" data-bs-toggle="tooltip" title="Delete user" v-if="action == 'edit'" @click="delete_context">Delete context</button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Discard</button>
-          <button type="button" class="btn btn-primary" @click="submit_data">${action == "edit" ? "Save" : "Create"}</button>
+          <button type="submit" class="btn btn-primary">${action == "edit" ? "Save" : "Create"}</button>
         </div>
       </form>
     </div>
