--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -35,7 +35,7 @@
 <script type="text/x-template" id="teamWindow">
   <div class="modal fade" id="teamModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true" ref="user_modal">
     <div class="modal-dialog modal-dialog-centered">
-      <form class="modal-content">
+      <form class="modal-content" @submit.prevent="submit_data">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="modalLabel">
           <span v-if="action == 'edit'">Edit team</span>
@@ -45,9 +45,9 @@
         </div>
         <div class="modal-body">
           <label for="name" class="form-label">Name</label>
-          <input class="form-control w-em" type="text" v-model="data.name">
+          <input class="form-control w-em" type="text" v-model="data.name" :required="action == 'create'">
           <label for="context" class="form-label">Context</label>
-          <select class="form-select w-em mb-3" name="context" v-model="data.context">
+          <select class="form-select w-em mb-3" name="context" v-model="data.context" :required="action == 'create'">
             <option v-for="(context, id) in store.contexts" :value="id" :selected="id == data.context">${context.name}</option>
           </select>
           <label for="members" class="form-label mb-0">Members</label>
@@ -81,7 +81,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-danger me-auto" title="Delete team" v-if="action == 'edit'" @click="delete_team">Delete team</button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Discard</button>
-          <button type="button" class="btn btn-primary" @click="submit_data">${action == "edit" ? "Save" : "Create"}</button>
+          <button type="submit" class="btn btn-primary">${action == "edit" ? "Save" : "Create"}</button>
         </div>
       </form>
     </div>
