--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -34,8 +34,11 @@
             <label class="btn btn-outline-success btn-sm" for="set-admin" data-bs-toggle="tooltip" title="Admin"><i class="bi bi-patch-check"></i></label>
           </div>
           <label for="email" class="form-label">Email</label>
-          <input class="form-control w-em form-control-sm mb-3" name="email" type="email" v-model="data.email" :required="action == 'create'">
-          <label for="teams" class="form-label mb-0">Teams</label>
+          <input class="form-control w-em form-control-sm" :class="{'is-invalid': error == 'email'}" name="email" type="email" v-model="data.email" :required="action == 'create'">
+          <div class="invalid-feedback">
+            Email already in use by another user
+          </div>
+          <label for="teams" class="form-label mt-3 mb-0">Teams</label>
           <div class="d-flex flex-row mb-1">
             <hover-badge v-for="id in display_teams" :data="store.teams[id]" @remove="remove_team"></hover-badge>
           </div>
