validate context name

--- a/algobattle_web/templates/admin_contexts.jinja
+++ b/algobattle_web/templates/admin_contexts.jinja
@@ -26,7 +26,10 @@
         </div>
         <div class="modal-body">
           <label for="name" class="form-label">Name</label>
-          <input class="form-control w-em" type="text" v-model="data.name" :required="action == 'create'">
+          <input class="form-control w-em" type="text" v-model="data.name" :required="action == 'create'" :class="{'is-invalid': error == 'name'}">
+          <div class="invalid-feedback">
+            Another context with that name exists already
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger me-auto" data-bs-toggle="tooltip" title="Delete user" v-if="action == 'edit'" @click="delete_context">Delete context</button>
