--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -153,7 +153,7 @@
           <div class="col">
             <label for="adminFilter" class="form-label mb-1">User type</label>
             <select class="form-select w-em" id="adminFilter" aria-label="User type filter" v-model="filter.is_admin">
-              <option selected value="null">Any</option>
+              <option selected :value="null">Any</option>
               <option value="true">Admin</option>
               <option value="false">Non Admin</option>
             </select>
