--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -45,7 +45,7 @@
         </div>
         <div class="modal-body">
           <label for="name" class="form-label">Name</label>
-          <input class="form-control w-em" type="text" v-model="data.name" :required="action == 'create'" :class="{'is-invalid': error == 'name'}">
+          <input class="form-control w-em" type="text" v-model="data.name" required :class="{'is-invalid': error == 'name'}">
           <div class="invalid-feedback">
             Another team with the same name already exists in this context
           </div>
