--- a/algobattle_web/templates/admin_contexts.jinja
+++ b/algobattle_web/templates/admin_contexts.jinja
@@ -85,7 +85,7 @@
       <ul class="pagination pagination-sm justify-content-end mb-0 ms-2">
         <li class="page-item"><a class="page-link" :class="{disabled: {{page}} <= 1}" :href="apply_filters(1)"><i class="bi bi-chevron-double-left"></i></a></li>
         <li class="page-item"><a class="page-link" :class="{disabled: {{page}} <= 1}" :href="apply_filters({{page}} - 1)"><i class="bi bi-chevron-compact-left"></i></a></li>
-        <li class="page-item"><a class="page-link" href="#">{{page}}</a></li>
+        <li class="page-item"><a class="page-link" href="#">{{page}} / {{max_page}}</a></li>
         <li class="page-item"><a class="page-link" :class="{disabled: {{page}} >= {{max_page}}}" :href="apply_filters({{page}} + 1)"><i class="bi bi-chevron-compact-right"></i></a></li>
         <li class="page-item"><a class="page-link" :class="{disabled: {{page}} >= {{max_page}}}" :href="apply_filters({{max_page}})"><i class="bi bi-chevron-double-right"></i></a></li>
       </ul>
