--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -39,7 +39,7 @@
             Email already in use by another user
           </div>
           <label for="teams" class="form-label mt-3 mb-0">Teams</label>
-          <div class="d-flex flex-row mb-1">
+          <div class="d-flex flex-row flex-wrap mb-1">
             <hover-badge v-for="id in display_teams" :data="store.teams[id]" @remove="remove_team"></hover-badge>
           </div>
           <div class="card mt-2">
@@ -58,7 +58,7 @@
                   <input type="text" class="form-control form-control-sm" id="searchName" v-model="search.name" @input="send_search">
                 </div>
               </div>
-              <div class="d-flex flex-row">
+              <div class="d-flex flex-row flex-wrap">
                 <span v-for="(team, id) in search.result" class="badge rounded-pill m-1 text-bg-success">
                   ${team_name(team)}
                   <a href="#" @click.prevent="add_team(team)" title="add">
