--- a/algobattle_web/templates/problems.jinja
+++ b/algobattle_web/templates/problems.jinja
@@ -3,145 +3,38 @@
 
 <script src="/static/scripts/problems.js" type="module"></script>
 <script>
-  var problems = {{problems | tojson}}
-  var configs = {{configs | tojson}}
+  const problems = {{problems | tojson}}
+  const contexts = {{contexts | tojson}}
+  const selected_context = {{selected_context | tojson}}
 </script>
 
 
 <script type="text/x-template" id="problem">
-  <div class="accordion-item">
-    <h2 class="accordion-header" :id="'heading' + problem.name">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" :data-bs-target="'#collapse' + problem.name" aria-expanded="false" :aria-controls="'collapse' + problem.name">
-        ${problem.name}
-      </button>
-    </h2>
-    <div :id="'collapse' + problem.name" class="accordion-collapse collapse" :aria-labelledby="'heading' + problem.name" data-bs-parent="#problems">
-      <form class="accordion-body" @submit.prevent="edit">
-        <table class="table">
-          <tbody>
-            <tr>
-              <td>Name</td>
-              <td>
-                <input v-if="editing" class="form-control form-control-sm" name="name" type="text" v-model="problem.name">
-                <span v-else>${problem.name}</span>
-              </td>
-            </tr>
-            <tr>
-              <td>File</td>
-              <td>
-                <input v-if="editing" class="e-em form-control form-control-sm" name="file" type="file">
-                <a v-else role="button" class="btn btn-primary btn-sm" :href="`/api/problem/${problem.id}/file`" data-bs-toggle="tooltip" title="Download config file">${problem.file.name} <i class="bi bi-file-earmark-arrow-down"></i></a>
-              </td>
-            </tr>
-            <tr>
-              <td>Config</td>
-              <td>
-                <select v-if="editing" class="form-select form-select-sm" name="config">
-                  <option v-for="(config, id) in store.configs" :value="id" :selected="id == problem.config">${config.name}</option>
-                </select>
-                <div v-else>
-                  ${store.configs[problem.config].name}
-                </div>
-              </td>
-            </tr>
-            <tr v-if="editing || problem.start">
-              <td>Start</td>
-              <td>
-                <input v-if="editing" class="form-control form-control-sm" name="start" type="datetime-local" :value="problem.start">
-                <div v-else>${fmt_date(problem.start)}</div>
-              </td>
-            </tr>
-            <tr v-if="editing || problem.end">
-              <td>End</td>
-              <td>
-                <input v-if="editing" class="form-control form-control-sm" name="end" type="datetime-local" :value="problem.end">
-                <div v-else>${fmt_date(problem.end)}</div>
-              </td>
-            </tr>
-            <tr v-if="editing || problem.description">
-              <td>Description</td>
-              <td>
-                <input v-if="editing" class="e-em form-control form-control-sm" name="description" type="file">
-                <a v-else role="button" class="btn btn-primary btn-sm" :href="`/api/problem/${problem.id}/description`" data-bs-toggle="tooltip" title="Download config file">
-                  ${problem.description.name} <i class="bi bi-file-earmark-arrow-down"></i>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        {% if user.is_admin %}
-        <div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete" v-if="editing" @click="delete_problem"><i class="bi bi-trash"></i></button>
-          <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-          <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
-        </div>
-        {% endif %}
-      </form>
+  <div class="card" style="width: 18rem;">
+    <img v-if="problem.image" :src="problem.image.file" class="card-img-top" :alt="problem.image.alt">
+    <div class="card-body">
+      <h5 class="card-title">${problem.name}</h5>
+      <p class="card-text">${problem.short_description}</p>
+      <a :href="`/problems/${store.context[problem.context].name}/${problem.name}" class="btn btn-primary">View details</a>
     </div>
   </div>
 </script>
 
 
 <div id="app" v-cloak>
-  <h3>Problems</h3>
-  <div class="accordion" id="problems">
-    <Problem v-for="(problem, id) in store.problems" :key="id" :problem="problem"></Problem>
-    {% if user.is_admin %}
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="create">
-        <button class="accordion-button collapsed bg-success bg-opacity-25" type="button" data-bs-toggle="collapse" data-bs-target="#collapsecreate" aria-expanded="false" aria-controls="collapsecreate">
-          Create new problem
-        </button>
-      </h2>
-      <div id="collapsecreate" class="accordion-collapse collapse" aria-labelledby="headingcreate" data-bs-parent="#problems">
-        <form class="accordion-body" @submit.prevent="create_problem">
-          <table class="table">
-            <tbody>
-              <tr>
-                <td>Name</td>
-                <td>
-                  <input class="form-control form-control-sm" name="name" type="text" required="required">
-                </td>
-              </tr>
-              <tr>
-                <td>File</td>
-                <td>
-                  <input class="form-control form-control-sm" name="file" type="file" required="required">
-                </td>
-              </tr>
-              <tr>
-                <td>Config</td>
-                <td>
-                  <select class="form-select form-select-sm" name="config">
-                    <option v-for="(config, id) in store.configs" :value="id">${config.name}</option>
-                  </select>
-                </td>
-              </tr>
-              <tr>
-                <td>Start</td>
-                <td>
-                  <input class="form-control form-control-sm" name="start" type="datetime-local">
-                </td>
-              </tr>
-              <tr>
-                <td>End</td>
-                <td>
-                  <input class="form-control form-control-sm" name="end" type="datetime-local">
-                </td>
-              </tr>
-              <tr>
-                <td>Description</td>
-                <td>
-                  <input class="form-control form-control-sm" name="description" type="file">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <button type="submit" class="btn btn-primary mt-3">Create</button>
-        </form>
-      </div>
-    </div>
-    {% endif %}
+  {% if user.is_admin %}
+  <h3>Upcoming</h3>
+  <div class="d-flex flex-wrap">
+    <problem v-for="(problem, id) in future_problems" :problem="problem" :key="id"></problem>
+  </div>
+  {% endif %}
+  <h3>Current</h3>
+  <div class="d-flex flex-wrap">
+    <problem v-for="(problem, id) in current_problems" :problem="problem" :key="id"></problem>
+  </div>
+  <h3>Past</h3>
+  <div class="d-flex flex-wrap">
+    <problem v-for="(problem, id) in past_problems" :problem="problem" :key="id"></problem>
   </div>
 </div>
 
