--- a/algobattle_web/templates/problems.jinja
+++ b/algobattle_web/templates/problems.jinja
@@ -10,12 +10,12 @@
 
 
 <script type="text/x-template" id="problem">
-  <div class="card" style="width: 18rem;">
-    <img v-if="problem.image" :src="problem.image.file" class="card-img-top" :alt="problem.image.alt">
+  <div class="card" style="width: 18rem; height: 24rem; opacity: 0.6;">
+    <img v-if="problem.image" :src="image_url" class="card-img-top" style="height: 10rem; object-fit: contain" :alt="problem.image.alt">
     <div class="card-body">
       <h5 class="card-title">${problem.name}</h5>
       <p class="card-text">${problem.short_description}</p>
-      <a :href="`/problems/${store.context[problem.context].name}/${problem.name}" class="btn btn-primary">View details</a>
+      <a :href="problem_url" class="btn btn-primary">View details</a>
     </div>
   </div>
 </script>
@@ -26,6 +26,13 @@
   <h3>Upcoming</h3>
   <div class="d-flex flex-wrap">
     <problem v-for="(problem, id) in future_problems" :problem="problem" :key="id"></problem>
+    <div class="card border border-success-subtle" style="width: 18rem; height: 24rem;">
+      <img src="/static/images/default_problem.png" style="height: 10rem; object-fit: contain" class="card-img-top" alt="">
+      <div class="card-body d-flex flex-column">
+        <h5 class="card-title mb-auto">New problem</h5>
+        <a href="/problems/create" class="btn btn-success mt-auto">Create</a>
+      </div>
+    </div>
   </div>
   {% endif %}
   <h3 v-if="Object.keys(current_problems).length != 0">Current</h3>
