--- a/algobattle_web/templates/problems.jinja
+++ b/algobattle_web/templates/problems.jinja
@@ -10,7 +10,7 @@
 
 
 <script type="text/x-template" id="problem">
-  <div class="card" style="width: 18rem; height: 24rem; opacity: 0.6;">
+  <div class="card" style="width: 18rem; height: 24rem;">
     <img v-if="problem.image" :src="image_url" class="card-img-top" style="height: 10rem; object-fit: contain" :alt="problem.image.alt">
     <div class="card-body">
       <h5 class="card-title">${problem.name}</h5>
