--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -34,19 +34,22 @@
         <div class="card">
           <form id="file_form" @submit.prevent="send_file" class="card-body" v-if="form_index == 0" novalidate>
             <h2 class="fs-title mb-3">Problem file</h2>
-            <label for="prob_file" class="form-label">Upload a new problem file</label>
-            <input type="file" name="file" class="form-control w-em mb-2" id="prob_file" ref="prob_file_select"/>
-            <div class="invalid-feedback">
-              Either select a problem file
+            <div class="alert alert-danger" role="alert" v-if="error == 'missing'">
+              Select either a problem file to upload, or an already existing problem to copy.
             </div>
+            <div class="alert alert-danger" role="alert" v-if="error == 'duplicate'">
+              You can only select one source for the problem file at once.
+            </div>
+            <div class="alert alert-danger" role="alert" v-if="error == 'file'">
+              The uploaded file does not contain a valid problem class.
+            </div>
+            <label for="prob_file" class="form-label">Upload a new problem file</label>
+            <input type="file" name="file" class="form-control w-em mb-2" id="prob_file" ref="prob_file_select" @change="$refs.prob_id_select.value = null"/>
             <label for="prob_select" class="form-label">Or use an already existing one</label>
-            <select class="form-select w-em" id="prob_select" name="problem_id" @change="$refs.prob_file_select.value = null">
+            <select class="form-select w-em" id="prob_select" name="problem_id" @change="$refs.prob_file_select.value = null" ref="prob_id_select">
               <option selected :value="null"></option>
               <option>Test</option>
             </select>
-            <div class="invalid-feedback">
-              Or select an existing one
-            </div>
             <div class="d-flex mt-3">
               <button class="btn btn-primary ms-auto" type="submit" class="next action-button" value="Next Step">Next</button>
             </div>
