--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -23,8 +23,8 @@
             <strong>Documentation</strong>
           </li>
           <li :class="{active: form_index == 2, set: form_index > 2}">
-            <i class="bi bi-calendar-week progress-icon"></i>
-            <strong>Schedule</strong>
+            <i class="bi bi-gear progress-icon"></i>
+            <strong>Settings</strong>
           </li>
           <li :class="{active: form_index == 3, set: form_index > 3}">
             <i class="bi bi-image progress-icon"></i>
